* Updated to java17